--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-VITE_WB_API_URL=http://localhost:5000
+VITE_API_URL=http://localhost:5000
 VITE_WB_API_KEY=your_api_key_here
 
 VITE_WEB_NAME=Nofino Admin Portal
 VITE_WEB_URL=http://localhost:5173
 VITE_WEB_DESCRIPTION=Your trusted partner in decentralized finance solutions.
+VITE_WEB_KEYWORDS=nofino, finance, admin, portal, management, dashboard
