--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
     "tailwind-merge": "^2.5.5"
   },
