--- a/Nofino_Finance_Admin/client/package.json
+++ b/Nofino_Finance_Admin/client/package.json
@@ -10,18 +10,26 @@
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.12.2",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.1.1",
+    "datatables.net-dt": "^2.3.4",
+    "datatables.net-react": "^1.0.1",
+    "datatables.net-responsive-dt": "^3.0.7",
+    "datatables.net-select-dt": "^3.1.3",
     "date-fns": "^4.1.0",
     "moment": "^2.29.4",
+    "pdfmake": "^0.2.20",
     "react": "^19.0.0",
+    "react-data-table-component": "^7.7.0",
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
