--- a/Nofino_Finance_Admin/client/package.json
+++ b/Nofino_Finance_Admin/client/package.json
@@ -8,17 +8,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@radix-ui/react-popover": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.12.2",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.1.1",
+    "datatables.net": "^2.3.4",
+    "datatables.net-buttons": "^3.2.5",
+    "datatables.net-buttons-dt": "^3.2.5",
     "datatables.net-dt": "^2.3.4",
     "datatables.net-react": "^1.0.1",
+    "datatables.net-responsive": "^3.0.7",
     "datatables.net-responsive-dt": "^3.0.7",
     "datatables.net-select-dt": "^3.1.3",
     "date-fns": "^4.1.0",
+    "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
     "moment": "^2.29.4",
     "pdfmake": "^0.2.20",
     "react": "^19.0.0",
