--- a/Nofino_Finance_Admin/client/package.json
+++ b/Nofino_Finance_Admin/client/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-popover": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
