--- a/Nofino_Finance_Admin/server/.env
+++ b/Nofino_Finance_Admin/server/.env
@@ -1,7 +1,7 @@
 
 PORT=5000
 
-SERVER_MONGODB_URI=mongodb+srv://Nofino_admin:QdnF0UnIefmsP7DX@cluster0.uq9ri.mongodb.net/Nofino_admin?retryWrites=true&w=majority&appName=Cluster0
+SERVER_MONGODB_URI=mongodb+srv://bank_nofino:banknofinox2@cluster0.yok7ldk.mongodb.net/bank_nofino?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET_KEY=NOFINORURALFINANCEPRIVATELIMITEDMANDIABARPETAASSAMINDIA
 
