--- a/Nofino_Finance_Admin/server/.env
+++ b/Nofino_Finance_Admin/server/.env
@@ -1,7 +1,7 @@
 
 PORT=5000
 
-SERVER_MONGODB_URI=mongodb+srv://bank_nofino:banknofinox2@cluster0.yok7ldk.mongodb.net/bank_nofino?retryWrites=true&w=majority&appName=Cluster0
+SERVER_MONGODB_URI=mongodb+srv://softdeve84_db_user:E4jEk4ebZeQ3lsaE@banking1.llo4tkt.mongodb.net/softdeve84_db_user?appName=banking1
 
 JWT_SECRET_KEY=NOFINORURALFINANCEPRIVATELIMITEDMANDIABARPETAASSAMINDIA
 
